2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-spatial-window.c (real_close_slot):
	Call parent method.

2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window.c: (real_disconnect_content_view):
	Do not try to hide zoom control if we are already destroyed.

	* src/nautilus-spatial-window.c (real_close_slot):
	Do not assert that the slot is currently active.

	* src/nautilus-window.c (nautilus_window_destroy),
	(nautilus_window_close):
	Move slot close code from close() to destroy().

2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-directory-view.c (hidden_files_mode_changed),
	(slot_active), (fm_directory_view_init),
	(fm_directory_view_finalize),
	(fm_directory_view_init_show_hidden_files), (real_merge_menus),
	(fm_directory_view_reset_to_defaults),
	(fm_directory_view_ignore_hidden_file_preferences),
	(fm_directory_view_set_property):
	* src/file-manager/fm-tree-model.c
	(fm_tree_model_set_show_hidden_files):
	* src/file-manager/fm-tree-model.h:
	* src/file-manager/fm-tree-view.c
	(update_filtering_from_preferences):
	* src/nautilus-actions.h:
	* src/nautilus-application.c
	(nautilus_application_close_all_navigation_windows):
	* src/nautilus-window-menus.c (action_show_hidden_files_callback),
	(show_hidden_files_preference_callback),
	(nautilus_window_initialize_menus):
	* src/nautilus-window.c (nautilus_window_set_hidden_files_mode):
	Move "Show hidden files" menu code and preference listening from
	FMDirectoryView to NautilusWindow (nautilus-window-menus.c).
	Sync all views on preference change or menu toggling.

2007-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window.c: (nautilus_window_close): Copy slot list
	before freeing slots, since it will change the list.

2007-03-21  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window.c: (notebook_switch_page_cb): Reuse
	nautilus_window_get_slot_for_content_box().
